--- a/test.html
+++ b/test.html
@@ -141,9 +141,9 @@
     <!-- Custom styles for this template -->
     <link href="dashboard.css" rel="stylesheet">
   </head>
-  <body>
+  <body onload="getData(myChart,dataset_id)">
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">user name</a>
   <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
@@ -166,22 +166,22 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file"></span>
-              Orders
+              Datasets
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="shopping-cart"></span>
               Products
             </a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="users"></span>
               Customers
             </a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="bar-chart-2"></span>
               Reports
@@ -192,11 +192,11 @@
               <span data-feather="layers"></span>
               Integrations
             </a>
-          </li>
+          </li> -->
         </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-          <span>Saved reports</span>
+          <span>Data Details</span>
           <a class="d-flex align-items-center text-muted" href="#">
             <span data-feather="plus-circle"></span>
           </a>
@@ -205,27 +205,27 @@
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Current month
+              Body Movements
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
-              Last quarter
+              Voice
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
               Social engagement
             </a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file-text"></span>
               Year-end sale
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -240,55 +240,55 @@
           </div>
           <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
             <span data-feather="calendar"></span>
-            This week
+            This Hour
           </button>
         </div>
       </div>
 
       <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
-      <h2>Section title</h2>
+      <h2>Movement Data</h2>
       <div class="table-responsive">
-        <table class="table table-striped table-sm">
+        <table class="table table-striped table-sm" data-url="https://d1ni87l7z3.execute-api.us-west-2.amazonaws.com/dev/movement/1/${badge_id}">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
+              <th>#BadgeID</th>
+              <th>TimeStamp</th>
+              <th>x</th>
+              <th>y</th>
+              <th>z</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>1,001</td>
-              <td>Lorem</td>
-              <td>ipsum</td>
-              <td>dolor</td>
-              <td>sit</td>
+              <td>1</td>
+              <td>15:46</td>
+              <td>1.23</td>
+              <td>2.55</td>
+              <td>-1212</td>
             </tr>
             <tr>
-              <td>1,002</td>
-              <td>amet</td>
-              <td>consectetur</td>
-              <td>adipiscing</td>
-              <td>elit</td>
+              <td>2</td>
+              <td>15:48</td>
+              <td>1.23</td>
+              <td>23.4</td>
+              <td>12</td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>Integer</td>
-              <td>nec</td>
-              <td>odio</td>
-              <td>Praesent</td>
+              <td>1</td>
+              <td>15:50</td>
+              <td>1.45</td>
+              <td>34</td>
+              <td>-2.66</td>
             </tr>
             <tr>
-              <td>1,003</td>
-              <td>libero</td>
-              <td>Sed</td>
-              <td>cursus</td>
-              <td>ante</td>
-            </tr>
-            <tr>
+              <td>2</td>
+              <td>15:52</td>
+              <td>2.33</td>
+              <td>2.56</td>
+              <td>5</td>
+            </tr> 
+            <!-- <tr>
               <td>1,004</td>
               <td>dapibus</td>
               <td>diam</td>
@@ -301,8 +301,8 @@
               <td>quis</td>
               <td>sem</td>
               <td>at</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>1,006</td>
               <td>nibh</td>
               <td>elementum</td>
@@ -315,8 +315,8 @@
               <td>ipsum</td>
               <td>Praesent</td>
               <td>mauris</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>1,008</td>
               <td>Fusce</td>
               <td>nec</td>
@@ -329,16 +329,16 @@
               <td>semper</td>
               <td>porta</td>
               <td>Mauris</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>1,010</td>
               <td>massa</td>
               <td>Vestibulum</td>
               <td>lacinia</td>
               <td>arcu</td>
             </tr>
-            <tr>
-              <td>1,011</td>
+            <tr> -->
+              <!-- <td>1,011</td>
               <td>eget</td>
               <td>nulla</td>
               <td>Class</td>
@@ -350,8 +350,8 @@
               <td>sociosqu</td>
               <td>ad</td>
               <td>litora</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>1,013</td>
               <td>torquent</td>
               <td>per</td>
@@ -364,14 +364,14 @@
               <td>inceptos</td>
               <td>himenaeos</td>
               <td>Curabitur</td>
-            </tr>
-            <tr>
+            </tr> -->
+            <!-- <tr>
               <td>1,015</td>
               <td>sodales</td>
               <td>ligula</td>
               <td>in</td>
               <td>libero</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
       </div>
@@ -386,21 +386,32 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
         <script>
 
-            const getData = (myChart, badge_id) => {
-                $.ajax({url: `https://d1ni87l7z3.execute-api.us-west-2.amazonaws.com/dev/movement/${badge_id}`, 
+            const getData = (myChart, dataset_id) => {
+                $.ajax({url: `https://ovf9zbzxz0.execute-api.us-west-2.amazonaws.com/dev/api/movement/${dataset_id}`, 
                         success: function(result){
-                            let labels = [];
-                            let data = [];
+                            let xlabels = [];
+                            let xdata = [];
+                            let ydata = [];
+                            let zdata = [];
+      
                             result.forEach(item => {
-                                labels.push(item.timeStamp);
-                                data.push(item.x);
+                                xlabels.push(item.time_stamp);
+                                xdata.push(item.x);
+                                ydata.push(item.y);
+                                zdata.push(item.z);
+                                
                             });
-                            myChart.data.labels = labels;
-                            myChart.data.datasets.forEach(dataset => {
-                                dataset.data = data;
+                            let d = [];
+                            d.push(xdata);
+                            d.push(ydata);
+                            d.push(zdata);
+
+                            myChart.data.labels = xlabels;
+                            myChart.data.datasets.forEach((dataset, index) => {
+                                dataset.data = d[index];
                             })
                             myChart.update();
-                            }
+                            } 
                         }
                 );
             }
@@ -414,30 +425,62 @@
                 type: 'line',
                 data: {
                 labels: [
-                    'Sunday',
-                    'Monday',
-                    'Tuesday',
-                    'Wednesday',
-                    'Thursday',
-                    'Friday',
-                    'Saturday'
+                    '1',
+                    '2',
+                    '3',
+                    '4',
+                    '5',
+                    '6',
+                    '7'
                 ],
                 datasets: [{
+                    label:'x',
                     data: [
-                    15339,
-                    21345,
-                    18483,
-                    24003,
-                    23489,
-                    24092,
-                    12034
+                    1.23,
+                    1.23,
+                    2.24,
+                    0.98,
+                    3.33,
+                    1.79,
+                    2.22
                     ],
                     lineTension: 0,
                     backgroundColor: 'transparent',
                     borderColor: '#007bff',
                     borderWidth: 4,
                     pointBackgroundColor: '#007bff'
-                }]
+                },{ label:'y',
+                    data: [
+                    2.55,
+                    3.42,
+                    2.78,
+                    3.89,
+                    4.01,
+                    1.99,
+                    1.87
+                    ],
+                    lineTension: 0,
+                    backgroundColor: 'transparent',
+                    borderColor: '#FF7B00',
+                    borderWidth: 4,
+                    pointBackgroundColor: '#007bff'
+                },{ label:'z',
+                    data: [
+                    -2,
+                    2.5,
+                    2.22,
+                    6,
+                    5.66,
+                    4.53,
+                    3.25
+                    ],
+                    lineTension: 0,
+                    backgroundColor: 'transparent',
+                    borderColor: '#7BFF00',
+                    borderWidth: 4,
+                    pointBackgroundColor: '#007bff'
+                }
+                ]
                 },
                 options: {
                 scales: {
@@ -448,7 +491,7 @@
                     }]
                 },
                 legend: {
-                    display: false
+                    display: true
                 }
                 }
             })
