--- a/public/test.html
+++ b/public/test.html
@@ -10,7 +10,9 @@
     <title>Dashboard Template · Bootstrap</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/dashboard/">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bootstrap-datetimepicker.min.css">
     <!-- Bootstrap core CSS -->
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.css">
@@ -190,6 +192,14 @@
           </button>
         </div>
       </div>
+      <div>
+        From:
+          <input type="text" class="form-control" id="start_picker">
+          To:
+          <input type="text" class="form-control" id="end_picker">
+          <button onclick="getTime(myChart)"> Search</button>
+      </div>
+      
 
       <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
 
@@ -244,13 +254,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"/>
 
-        <button class="btn btn-primary" onclick="getDetails();">Get Data </button>
         <table class="table">
           <thead>
             <th>Badge ID</th><th>TimeStamp</th><th>x Value</th><th>y Value</th><th>z Value</th></tr>
           </thead>
           <tbody id="tBody"></tbody>
         </table>
+
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <!-- <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script> -->
@@ -259,8 +270,26 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
         <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js" type="text/javascript"></script>
+        <script src="bootstrap-datetimepicker.min.js"></script>
         <script>
 
+          function getTime(myChart){
+            var dateFrom = $('#start_picker').data("DateTimePicker").date();
+            console.log(dateFrom);
+            if (dateFrom != null) {
+              dateFrom = dateFrom.valueOf();
+            }
+            var dateTo = $('#end_picker').data("DateTimePicker").date();
+            if (dateTo != null) {
+              dateTo = dateTo.valueOf();
+            }
+            getData(myChart, dateFrom, dateTo);
+            getDetails(dateFrom, dateTo);
+          }
             function getUrlVars() {
                 var vars = {};
                 var parts = window.location.href.replace(/[?&]+([^=&]+)=([^&]*)/gi, function(m,key,value) {
@@ -271,8 +300,16 @@
             const dataset_id = getUrlVars()["dataset_id"];
             const badge_id = getUrlVars()["badge_id"];
 
-            const getData = (myChart) => {
-                $.ajax({url: `https://d5g9mhm4x5.execute-api.us-west-2.amazonaws.com/dev/api/movement/${dataset_id}?badge_id=${badge_id}`, 
+            const getData = (myChart, dateFrom, dateTo) => {
+              var URL = `https://d5g9mhm4x5.execute-api.us-west-2.amazonaws.com/dev/api/movement/${dataset_id}?badge_id=${badge_id}`;
+              if (dateFrom != null) {
+                URL = URL + "&dataFrom=" + dateFrom.toString();
+              }
+              if (dateTo != null) {
+                URL = URL + "&dataTo=" + dateTo.toString();
+              }
+              console.log(URL);
+                $.ajax({url: URL, 
                         success: function(result){
                             let xlabels = [];
                             let xdata = [];
@@ -381,10 +418,17 @@
                 }
             })
 
-            function getDetails(){
-              getData(myChart,1);
+            function getDetails(dateFrom, dateTo){
+              var URL = `https://d5g9mhm4x5.execute-api.us-west-2.amazonaws.com/dev/api/movement/${dataset_id}?badge_id=${badge_id}`;
+              if (dateFrom != null) {
+                URL = URL + "&dataFrom=" + dateFrom.toString();
+              }
+              if (dateTo != null) {
+                URL = URL + "&dataTo=" + dateTo.toString();
+              }
+              // getData(myChart,1);
     $.ajax({
-        url: `https://d5g9mhm4x5.execute-api.us-west-2.amazonaws.com/dev/api/movement/${dataset_id}?badge_id=${badge_id}`,
+        url: URL,
         method:'GET',
         contentType: "application/json",    
         dataType:'json',
@@ -392,7 +436,7 @@
         var trHTML='';
         
             for(var i=0;i<result.length;i++){
-           trHTML=trHTML+'<tr><td>'+result[i].badge_id+'</td><td>'+result[i].time_stamp+'</td><td>'+result[i].raw_x+'</td><td>'+result[i].raw_y+'</td><td>'+result[i].raw_z+'</td></tr>'; 
+           trHTML=trHTML+'<tr><td>'+result[i].badge_id+'</td><td>'+new Date(result[i].time_stamp).toLocaleString()+'</td><td>'+result[i].raw_x+'</td><td>'+result[i].raw_y+'</td><td>'+result[i].raw_z+'</td></tr>'; 
            }
           $('#tBody').append(trHTML);
         },
@@ -408,7 +452,14 @@
               }
               return urlparameter;
             }
+            $(function () {
+              $('#start_picker').datetimepicker();
 
+            });
+            $(function () {
+              $('#end_picker').datetimepicker();
+
+            });
         </script>
     </body>
 </html>
