added serverless framework

--- a/public/table.html
+++ b/public/table.html
@@ -39,12 +39,12 @@ href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
                <th>Discription</th> 
             </tr> 
             <tr class="clickable text-center" 
-               onclick="window.location='/movement?dataset_id=9&badge_id=999'"> 
+               onclick="window.location='/dev/movement?dataset_id=9&badge_id=999'"> 
                <td>Body Movement</td> 
                <td>Body movement acceleration on x, y, z</td> 
             </tr> 
             <tr class="clickable text-center" 
-               onclick="window.location='/voice?dataset_id=9&badge_id=999'"> 
+               onclick="window.location='/dev/voice?dataset_id=9&badge_id=999'"> 
                <td>Voice</td> 
                <td>Voice frequency & amplitude</td> 
             </tr> 
