--- a/public/table.html
+++ b/public/table.html
@@ -30,8 +30,8 @@ href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 </head> 
   
 <body> 
-    <h1 style="color:green;text-align:center;">Web Badge</h1> 
-  
+    <h1 style="color:black;text-align:center;">Sensor Page</h1> 
+    <p style="color:black;text-align:center;"> please choose the sensor</p>
     <div class="container"> 
         <table class="w-100"> 
             <tr class="text-center"> 
