--- a/public/secondPage.html
+++ b/public/secondPage.html
@@ -139,6 +139,12 @@
         }
       }
     </style>
+    <head>
+
+    <body>
+        <h1 style="color:black;text-align:center;padding-top:50px">badge_id page</h1> 
+        <p style="color:black;text-align:center;">Please choose badge_id</p>
+    </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css"/>
