--- a/public/voice.html
+++ b/public/voice.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -21,17 +20,14 @@
         body {
   font-size: .875rem;
 }
-
 .feather {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
 }
-
 /*
  * Sidebar
  */
-
 .sidebar {
   position: fixed;
   top: 0;
@@ -41,7 +37,6 @@
   padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
-
 .sidebar-sticky {
   position: relative;
   top: 0;
@@ -50,56 +45,45 @@
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
 }
-
 @supports ((position: -webkit-sticky) or (position: sticky)) {
   .sidebar-sticky {
     position: -webkit-sticky;
     position: sticky;
   }
 }
-
 .sidebar .nav-link {
   font-weight: 500;
   color: #333;
 }
-
 .sidebar .nav-link .feather {
   margin-right: 4px;
   color: #999;
 }
-
 .sidebar .nav-link.active {
   color: #007bff;
 }
-
 .sidebar .nav-link:hover .feather,
 .sidebar .nav-link.active .feather {
   color: inherit;
 }
-
 .sidebar-heading {
   font-size: .75rem;
   text-transform: uppercase;
 }
-
 /*
  * Content
  */
-
 [role="main"] {
   padding-top: 133px; /* Space for fixed navbar */
 }
-
 @media (min-width: 768px) {
   [role="main"] {
     padding-top: 48px; /* Space for fixed navbar */
   }
 }
-
 /*
  * Navbar
  */
-
 .navbar-brand {
   padding-top: .75rem;
   padding-bottom: .75rem;
@@ -107,24 +91,20 @@
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
-
 .navbar .form-control {
   padding: .75rem 1rem;
   border-width: 0;
   border-radius: 0;
 }
-
 .form-control-dark {
   color: #fff;
   background-color: rgba(255, 255, 255, .1);
   border-color: rgba(255, 255, 255, .1);
 }
-
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
 }
-
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -133,7 +113,6 @@
         -ms-user-select: none;
         user-select: none;
       }
-
       @media (min-width: 768px) {
         .bd-placeholder-img-lg {
           font-size: 3.5rem;
@@ -141,7 +120,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
+    <!-- <link href="dashboard.css" rel="stylesheet"> -->
   </head>
   <body onload="getData(myChart);getDetails()">
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -162,10 +141,10 @@
           <li class="nav-item">
             <a class="nav-link active" href="/dev">
               <span data-feather="home"></span>
-              Dashboard <span class="sr-only">(current)</span>
+              Return <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">
               <span data-feather="file"></span>
               Datasets
@@ -176,7 +155,7 @@
               <span data-feather="file"></span>
               Datasets
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </nav>
@@ -244,7 +223,6 @@
         <script src="bootstrap-datetimepicker.min.js"></script>
         <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script>
         <script>
-
           function getTime(myChart){
             var dateFrom = $('#start_picker').data("DateTimePicker").date();
             console.log(dateFrom);
@@ -267,7 +245,6 @@
             }
             const dataset_id = getUrlVars()["dataset_id"];
             const badge_id = getUrlVars()["badge_id"];
-
             const getData = (myChart, dateFrom, dateTo) => {
               var URL = `/dev/api/voice/${dataset_id}?badge_id=${badge_id}`;
               if (dateFrom != null) {
@@ -292,8 +269,6 @@
                             let d = [];
                             d.push(mdata);
                             d.push(fdata);
-
-
                             myChart.data.labels = xlabels;
                             myChart.data.datasets.forEach((dataset, index) => {
                                 dataset.data = d[index];
@@ -305,7 +280,6 @@
             }
             'use strict'
             feather.replace()
-
             //Graphs
             var ctx = document.getElementById('myChart')
             //eslint-disable-next-line no-unused-vars
@@ -321,7 +295,7 @@
                     lineTension: 0,
                     backgroundColor: 'transparent',
                     borderColor: '#007bff',
-                    borderWidth: 4,
+                    borderWidth: 1,
                     pointBackgroundColor: '#007bff'
                 },{ label:'Frequency',
                     data: [
@@ -329,7 +303,8 @@
                     lineTension: 0,
                     backgroundColor: 'transparent',
                     borderColor: '#FF7B00',
-                    borderWidth: 4,
+                    borderWidth: 1
+                    ,
                     pointBackgroundColor: '#007bff'
                 }
                 ]
@@ -347,9 +322,7 @@
                 }
                 }
             })
-
             let UPDATE = 5000;
-
             $(document).ready(function() {
                 var table = $('#myTable').DataTable( {
                         ajax: {
@@ -374,12 +347,10 @@
             } 
               
             );
-
             setInterval( function () {
               console.log('reload');
                 $('#myTable').DataTable().ajax.reload(null, false);
             }, UPDATE  );
-
             function getUrlParam(parameter, defaultvalue){
               var urlparameter = defaultvalue;
               if(window.location.href.indexOf(parameter) > -1){
@@ -389,11 +360,9 @@
             }
             $(function () {
               $('#start_picker').datetimepicker();
-
             });
             $(function () {
               $('#end_picker').datetimepicker();
-
             });
         </script>
     </body>
