--- a/public/table.html
+++ b/public/table.html
@@ -171,7 +171,7 @@
           <tbody>
           <tr class="clickable" onclick="window.location=`/dev/movement?dataset_id=${dataset_id}&badge_id=${badge_id}`">
               <th scope="row">1</th>
-              <td>Body Movement</td>
+              <td>(Raw)Body Movement</td>
               <td>Body movement acceleration on x, y, z</td>
           </tr>
           <tr class="clickable" onclick="window.location=`/dev/voice?dataset_id=${dataset_id}&badge_id=${badge_id}`">
@@ -179,6 +179,11 @@
               <td>Voice</td>
               <td>Voice frequency & amplitude</td>
           </tr>
+          <tr class="clickable" onclick="window.location=`/dev/movementState?dataset_id=${dataset_id}&badge_id=${badge_id}`">
+            <th scope="row">3</th>
+            <td>State(Body Movement)</td>
+            <td>Body movement State</td>
+        </tr>
           </tbody>
       </table>
       </div>
