--- a/public/movementState.html
+++ b/public/movementState.html
@@ -178,6 +178,7 @@
 
     <div class="container">
       <table id="myTable" class="display nowrap" width="100%">
+        <p id="percentage"> The percentage of each kind of movement:</p>
         <thead>
           <tr>
             <th>Badge ID</th>
@@ -255,11 +256,11 @@
                                 xdata.push(item.raw_x);
                                 ydata.push(item.raw_y);
                                 //zdata.push(item.raw_z);
-                                if (item.raw_y == 0){sumSit += 1};
-                                if (item.raw_y == 1){sumStand += 1};
+                                if (item.raw_y == 3){sumSit += 1};
+                                if (item.raw_y == 4){sumStand += 1};
                                 if (item.raw_y == 2){sumWalk += 1};
-                                
                             });
+
                             var pctSit = 100*sumSit/(sumSit+sumStand+sumWalk);
                             var pctStand = 100*sumStand/(sumSit+sumStand+sumWalk);
                             var pctWalk = 100*sumWalk/(sumSit+sumStand+sumWalk);
@@ -268,7 +269,7 @@
                             console.log((pctWalk.toFixed(2)).toString() + '%');
                             var pctres = 'Sitting:'+ (pctSit.toFixed(2)).toString() + '% ' + 'Moving:'+ (pctStand.toFixed(2)).toString() + '% ';
                             document.getElementById('percentage').innerHTML= pctres;
-                            
+
                             let d = [];
                             d.push(xdata);
                             d.push(ydata);
@@ -416,4 +417,4 @@
             });
         </script>
     </body>
-</html> 
+</html>
