--- a/public/movementState.html
+++ b/public/movementState.html
@@ -267,7 +267,7 @@
                             console.log((pctSit.toFixed(2)).toString() + '%');
                             console.log((pctStand.toFixed(2)).toString() + '%');
                             console.log((pctWalk.toFixed(2)).toString() + '%');
-                            var pctres = 'Sitting:'+ (pctSit.toFixed(2)).toString() + '% ' + 'Moving:'+ (pctStand.toFixed(2)).toString() + '% ';
+                            var pctres = 'Static:'+ (pctSit.toFixed(2)).toString() + '% ' + 'Moving:'+ (pctStand.toFixed(2)).toString() + '% ';
                             document.getElementById('percentage').innerHTML= pctres;
 
                             let d = [];
