--- a/public/movementState.html
+++ b/public/movementState.html
@@ -295,7 +295,7 @@
                     
                 ],
                 datasets: [{
-                    label:'0-static  1-sit down   2-stand up',
+                    label:'0-sit  1-stand',
                     data: [
                    
                     ],
