--- a/public/secondPage.html
+++ b/public/secondPage.html
@@ -158,7 +158,7 @@
             <tr>
               <th>badge_id</th>
               <th>dataset_id</th>
-              <th>mac_id</th>
+              <th>mac_address</th>
               <th>time_stamp</th>
               <th>user_id</th>
               <th>user_name</th>
@@ -211,7 +211,7 @@
                         return `<a href= '/dev/dataset/badge?dataset_id=${dataset_id}&badge_id=${data}'>${data}</a>`;
                       }},
                       {data : 'dataset_id'},
-                      {data : 'mac_id'},
+                      {data : 'mac_address'},
                       {data : 'time_stamp'},
                       {data : 'user_id'},
                       {data : 'user_name'}
